tests/positive/features_oop_async.tx
import { assert_eq_int } from "./utils.tx";

class AsyncCalc {
    value: int;

    constructor(v: int) {
        this.value = v;
    }

    async doWork(x: int): Promise<int> {
        // Test 'this' access in async method
        let res = this.value + x;
        return res;
    }

    async slowAdd(a: int, b: int): Promise<int> {
        let res = a + b;
        return res;
    }
}

async function main() {
    let calc = new AsyncCalc(10);
    print("Initial value: 10");

    let p1 = calc.doWork(5);
    let v1 = await p1;
    assert_eq_int(v1, 15, "Async method 'this' access");

    let p2 = calc.slowAdd(100, 200);
    let v2 = await p2;
    assert_eq_int(v2, 300, "Async method arguments");
    
    print("Async OOP test complete");
}


